# RAGFlow-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  retrieval_quality_deep_system_improvement_report.md  retrieval_quality_investigation.md  retrieval_quality_patch_design_report.md
configs/: eragb_small.yaml  eragb_smoke.yaml  frames_full.yaml  frames_oracle.yaml  frames_smoke.yaml
data/frames/: frames_mapping.json  prepare_report.json
data/frames-full/: prepare_report.json
data/frames-smoke/: frames_mapping.json  prepare_report.json
src/ragflow_bench/: cli.py  config.py  judge.py  logging_utils.py  rate_limits.py  wizard.py
src/ragflow_bench/benchmarks/: __init__.py  base.py  custom.py  enterprise_rag_bench.py  eragb_prep.py  frames.py  frames_prep.py
src/ragflow_bench/execution/: __init__.py  benchmark_runner.py  chat_runner.py  retrieval_runner.py
src/ragflow_bench/ingestion/: __init__.py  document_registry.py  ingest.py  parse_waiter.py
src/ragflow_bench/ragflow/: __init__.py  client.py  errors.py  models.py
src/ragflow_bench/reports/: __init__.py  diagnostics.py  summary.py  writers.py
src/ragflow_bench/scoring/: __init__.py  answer_scoring.py  failure_classification.py  retrieval_scoring.py
tests/: test_benchmark_runner.py  test_cli.py  test_config.py  test_doctor.py  test_document_registry.py  test_eragb_prep.py  test_frames_prep.py  test_ingest.py  test_judge.py  test_logging_utils.py  test_scoring.py  test_wizard.py
